--- a/package.json
+++ b/package.json
@@ -6,7 +6,8 @@
     "build": "grafana-toolkit plugin:build",
     "test": "grafana-toolkit plugin:test",
     "dev": "grafana-toolkit plugin:dev",
-    "watch": "grafana-toolkit plugin:dev --watch"
+    "watch": "grafana-toolkit plugin:dev --watch",
+    "sign": "grafana-toolkit plugin:sign"
   },
   "repository": "github:grafana/simple-react-panel",
   "author": "Grafana Labs <team@grafana.com> (https://grafana.com)",
