--- a/package.json
+++ b/package.json
@@ -17,9 +17,9 @@
     "email": "plugins@grafana.com"
   },
   "devDependencies": {
-    "@grafana/data": "^7.0.0",
-    "@grafana/toolkit": "^7.0.0",
-    "@grafana/ui": "^7.0.0",
+    "@grafana/data": "8.3.0",
+    "@grafana/toolkit": "8.0.6",
+    "@grafana/ui": "8.3.0",
     "emotion": "10.0.27"
   },
   "engines": {
