--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "node": ">=12"
   },
   "dependencies": {
-    "d3": "^6.2.0"
+    "d3": "^6.2.0",
+    "grafana-plugin-support": "latest"
   }
 }
