--- a/package.json
+++ b/package.json
@@ -1,13 +1,19 @@
 {
   "name": "netsage-bumpchart-panel",
-  "version": "1.0.2",
+  "version": "1.0.3",
   "description": "Bump Chart Panel Plugin",
   "scripts": {
-    "build": "grafana-toolkit plugin:build",
-    "test": "grafana-toolkit plugin:test",
-    "dev": "grafana-toolkit plugin:dev",
-    "watch": "grafana-toolkit plugin:dev --watch",
-    "sign": "grafana-toolkit plugin:sign"
+    "build": "webpack -c ./.config/webpack/webpack.config.ts --env production",
+    "dev": "webpack -w -c ./.config/webpack/webpack.config.ts --env development",
+    "e2e": "yarn exec cypress install && yarn exec grafana-e2e run",
+    "e2e:update": "yarn exec cypress install && yarn exec grafana-e2e run --update-screenshots",
+    "lint": "eslint --cache --ignore-path ./.gitignore --ext .js,.jsx,.ts,.tsx .",
+    "lint:fix": "yarn run lint --fix",
+    "server": "docker-compose up --build",
+    "sign": "npx --yes @grafana/sign-plugin@latest",
+    "test": "jest --watch --onlyChanged",
+    "test:ci": "jest --passWithNoTests --maxWorkers 4",
+    "typecheck": "tsc --noEmit"
   },
   "repository": "github:netsage-project/netsage-bumpchart-panel",
   "author": "Netsage Project",
@@ -17,16 +23,56 @@
     "email": "plugins@grafana.com"
   },
   "devDependencies": {
-    "@grafana/data": "8.3.0",
-    "@grafana/toolkit": "latest",
-    "@grafana/ui": "8.3.0",
-    "emotion": "10.0.27"
+    "@babel/core": "^7.16.7",
+    "@grafana/e2e": "9.3.8",
+    "@grafana/e2e-selectors": "9.3.8",
+    "@grafana/eslint-config": "^5.1.0",
+    "@grafana/tsconfig": "^1.2.0-rc1",
+    "@swc/core": "^1.3.51",
+    "@swc/helpers": "^0.5.0",
+    "@swc/jest": "^0.2.23",
+    "@testing-library/jest-dom": "^5.16.2",
+    "@testing-library/react": "^12.1.4",
+    "@types/jest": "^29.2.2",
+    "@types/lodash": "^4.14.188",
+    "@types/node": "^18.11.9",
+    "@types/react": "17.0.42",
+    "@types/react-dom": "17.0.14",
+    "copy-webpack-plugin": "^11.0.0",
+    "css-loader": "^6.7.1",
+    "emotion": "10.0.27",
+    "eslint-webpack-plugin": "^3.1.1",
+    "fork-ts-checker-webpack-plugin": "^7.2.0",
+    "glob": "^10.0.0",
+    "identity-obj-proxy": "3.0.0",
+    "jest": "^29.3.1",
+    "jest-environment-jsdom": "^29.3.1",
+    "prettier": "^2.5.0",
+    "replace-in-file-webpack-plugin": "^1.0.6",
+    "sass": "1.56.1",
+    "sass-loader": "13.2.0",
+    "style-loader": "3.3.1",
+    "swc-loader": "^0.2.3",
+    "ts-node": "^10.5.0",
+    "tsconfig-paths": "^4.1.0",
+    "typescript": "^4.4.0",
+    "webpack": "^5.69.1",
+    "webpack-cli": "^4.9.2",
+    "webpack-livereload-plugin": "^3.0.2"
   },
   "engines": {
     "node": ">=12"
   },
   "dependencies": {
+    "@emotion/css": "^11.1.3",
+    "@grafana/data": "8.3.0",
+    "@grafana/runtime": "9.3.8",
+    "@grafana/ui": "8.3.0",
     "d3": "^6.2.0",
-    "grafana-plugin-support": "latest"
-  }
+    "grafana-plugin-support": "latest",
+    "react": "17.0.2",
+    "react-dom": "17.0.2",
+    "tslib": "2.5.0"
+  },
+  "packageManager": "yarn@1.22.10"
 }
