--- a/package.json
+++ b/package.json
@@ -41,6 +41,7 @@
     "copy-webpack-plugin": "^11.0.0",
     "css-loader": "^6.7.1",
     "d3": "^7.4.3",
+    "d3-scale": "^4.0.2",
     "emotion": "10.0.27",
     "eslint-webpack-plugin": "^3.1.1",
     "fork-ts-checker-webpack-plugin": "^7.2.0",
@@ -66,9 +67,9 @@
   },
   "dependencies": {
     "@emotion/css": "^11.1.3",
-    "@grafana/data": "8.3.0",
+    "@grafana/data": "latest",
     "@grafana/runtime": "9.3.8",
-    "@grafana/ui": "8.3.0",
+    "@grafana/ui": "latest",
     "grafana-plugin-support": "latest",
     "react": "17.0.2",
     "react-dom": "17.0.2",
